navbar collapse brakpoint fix.

--- a/css/app.css
+++ b/css/app.css
@@ -352,6 +352,9 @@ ng:form {
     .navbar-header {
         float: none;
     }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
     .navbar-toggle {
         display: block;
     }
@@ -359,12 +362,16 @@ ng:form {
         border-top: 1px solid transparent;
         box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
     }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
     .navbar-collapse.collapse {
         display: none!important;
     }
     .navbar-nav {
         float: none!important;
-        margin: 7.5px -15px;
+        margin-top: 7.5px;
     }
     .navbar-nav>li {
         float: none;
@@ -372,5 +379,8 @@ ng:form {
     .navbar-nav>li>a {
         padding-top: 10px;
         padding-bottom: 10px;
+    }
+    .collapse.in{
+        display:block !important;
     }
 }
